# rust-actix

./: .env-example  Cargo.toml
src/: main.rs  paths.rs
src/client/: client.rs  mod.rs
src/mahasiswa/: mahasiswa.rs  mod.rs  model.rs
src/multi/: mod.rs  multi.rs
